Переделала структуру. Модуль 4

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@
 ################################################################################
 
 /.vs
-/ConsoleApp2/bin/Debug/net6.0
-/ConsoleApp2/obj
+*/obj
+*/bin
